# recipeat

./: .gitignore  README.md  default.nix  pyproject.toml
recipeat/: db.sqlite3  manage.py
recipeat/recipeat/: asgi.py  settings.py  urls.py  wsgi.py
recipeat/recipes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
recipeat/recipes/migrations/: 0001_initial.py  0002_rename_instructions_instruction.py  0003_alter_ingredient_comment_and_more.py  0004_alter_ingredient_comment_and_more.py
recipeat/recipes/templates/recipes/: base.html  detail.html  index.html  recipe_success.html  submit_recipe.html
recipeat/recipes/utils/: add_ingredient_quantities.py  recipe_scraper.py
recipeat/static/css/: style.css
