[tool.poetry]
name = "recipeat"
version = "0.1.0"
description = ""
authors = ["matt yerkes <mattyerkes23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^5.1.1"
ingredient-parser-nlp = "^1.1.2"
recipe-scrapers = "^15.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
